--- a/.env
+++ b/.env
@@ -6,6 +6,6 @@
 # reference these in your code with process.env.SECRET
 
 JWT_SECRET=REFLECTIONS_SECRET
-DATABASE_URL=
+DATABASE_URL=mongodb://cap3:pikapika1@ds247690.mlab.com:47690/blog-app-schema-challenge
 
 # note: .env is a shell file so there can't be spaces around =
