--- a/.env
+++ b/.env
@@ -6,6 +6,5 @@
 # reference these in your code with process.env.SECRET
 
 JWT_SECRET=REFLECTIONS_SECRET
-DATABASE_URL=mongodb://cap3:pikapika1@ds247690.mlab.com:47690/blog-app-schema-challenge
-
+mongodb://cap3:pikapika1@ds145312.mlab.com:45312/capstone-3
 # note: .env is a shell file so there can't be spaces around =
